# verifiable-intelligence

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  SECURITY.md  SPEC.md  clippy.toml  deny.toml  package-lock.json  package.json  playwright.config.js  rustfmt.toml  secret-scan.allowlist.json
.github/workflows/: ci.yml  keygen-determinism.yml  nightly.yml  proof-bundle.yml  static-demo-pages.yml  watch-commitllm-rename.yml
broker/: fixture-broker.js  server.js
crates/verifiable-intelligence/: Cargo.toml
crates/verifiable-intelligence/src/: lib.rs  main.rs
crates/verifiable-intelligence/tests/: chat_cli.rs  cli_skeleton.rs  error_boundary.rs  help_snapshots.rs  keygen_cli.rs  tui_cli.rs  verify_cli.rs
crates/verifiable-intelligence/tests/snapshots/help/: chat.txt  keygen.txt  root.txt  tui.txt  verify.txt
crates/vi-cli/: Cargo.toml
crates/vi-cli/src/: lib.rs
crates/vi-cli/tests/snapshots/output/: chat.json  keygen.json  tui.json  verify.json
crates/vi-client/: Cargo.toml
crates/vi-client/src/: lib.rs
crates/vi-errors/: Cargo.toml
crates/vi-errors/src/: lib.rs
crates/vi-keygen/: Cargo.toml
crates/vi-keygen/src/: lib.rs
crates/vi-log/: Cargo.toml
crates/vi-log/src/: lib.rs
crates/vi-receipt/: Cargo.toml
crates/vi-receipt/src/: lib.rs
crates/vi-tui/: Cargo.toml
crates/vi-tui/src/: lib.rs
crates/vi-verifier/: Cargo.toml
crates/vi-verifier/src/: lib.rs
demo/: index.html
docs/ci/: README.md  gpu-runners.md  performance.md  red-build.md  secret-scanning.md
docs/deployment/: hf.md  self-hosted.md
docs/guides/: buyer-proof-guide.md  provider-integration-guide.md
docs/measurements/: corridor.md
docs/release/: v0.1.0-pivot-demo.md  yank.md
docs/rfcs/: RFC-0001-workspace-and-crate-layout.md  RFC-0002-cli-surface.md  RFC-0003-receipt-format-pinning.md  RFC-0004-verifier-key-generation.md  RFC-0005-provider-image.md  RFC-0006-receipt-api-header.md  RFC-0007-hf-deployment-recipe.md  RFC-0008-tui-architecture.md  RFC-0009-tamper-fuzz-harness.md  RFC-0010-corridor-measurement.md  RFC-0011-commitllm-upstream-pinning.md  RFC-0012-w8a8-quantization.md  RFC-0013-ci-pipeline.md  RFC-0014-error-taxonomy.md  RFC-0015-observability-schema.md  RFC-0016-marketplace-demo-pivot.md
docs/roadmap/: IMPLEMENTATION.md
docs/spec/: 00-overview.md  01-architecture.md  02-public-api.md  03-data-model.md  04-error-model.md  05-observability.md  06-security.md  07-testing-strategy.md  08-performance-budget.md  09-release-and-versioning.md  10-glossary.md
docs/spikes/: commitllm-wasm-verifier-2026-06-29.md  commitllm-wasm-wrapper-2026-06-29.md  reference-model.md
fixtures/cli/: chat-no-receipt.json  verify-fail.json
fixtures/errors/: envelopes.json
fixtures/viex/: answer-rewrite.json  expired-quote.json  happy-path.json  manifest.json  missing-receipt.json  model-swap.json  prompt-mismatch.json  receipt-tamper.json  wrong-key.json
provider/: Dockerfile  compose.yaml  entrypoint.sh  healthz.py
schemas/: chat-output.schema.json  error-envelope.schema.json  keygen-output.schema.json  verify-report.schema.json  viex.schema.json
scripts/: test-broker-api.js  test-doc-boundaries.js  test-provider-entrypoint.js  test-release-comprehension.js  test-viex-tamper-suite.js  validate-error-envelopes.js  validate-schema-fixtures.js  validate-viex-fixtures.js
scripts/ci/: actionlint.sh  check-changelog-pin.js  check-commitllm-pin.js  check-size-budgets.js  collect-browser-perf.js  deny.sh  forbidden_edges.py  lints.sh  secret-scan.js  test-actionlint.sh  test_forbidden_edges.py  watch-commitllm-rename.js
tests/: commitllm-wasm.spec.js  demo.spec.js
verifier/wasm/: Cargo.toml  harness.html
verifier/wasm/fixtures/: commitllm-fullbridge.viex.json
verifier/wasm/pkg/: LICENSE  package.json  vi_commitllm_verifier.d.ts  vi_commitllm_verifier.js  vi_commitllm_verifier_bg.wasm  vi_commitllm_verifier_bg.wasm.d.ts
verifier/wasm/src/: lib.rs
verifier/wasm/zstd-compat/: Cargo.toml
verifier/wasm/zstd-compat/src/: lib.rs
