[workspace]
resolver = "2"
members = [
    "crates/vi-cli",
    "crates/vi-tui",
    "crates/vi-client",
    "crates/vi-verifier",
    "crates/vi-keygen",
    "crates/vi-receipt",
    "crates/vi-log",
    "crates/vi-errors",
    "crates/verifiable-intelligence",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/AbdelStark/verifiable-intelligence"
authors = ["Verifiable Intelligence contributors"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pragmatic allows. Re-evaluated as the codebase fills in.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
