[package]
name = "vi-client"
description = "HTTPS client for the CommitLLM-instrumented provider endpoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
vi-errors = { path = "../vi-errors" }
vi-receipt = { path = "../vi-receipt" }

[lints]
workspace = true
