[package]
name = "vi-log"
description = "Tracing subscriber and redaction layer for verifiable-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true
