[package]
name = "vi-log"
description = "Tracing subscriber and redaction layer for verifiable-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"

[lints]
workspace = true
