[package]
name = "vi-receipt"
description = "Envelope codec for CommitLLM receipts (VIKY, VIRC, VIAU)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
crc = "=3.2.1"
serde = { version = "1", features = ["derive"] }
vi-errors = { path = "../vi-errors" }

[dev-dependencies]
proptest = "=1.6.0"

[lints]
workspace = true
