[package]
name = "vi-verifier"
description = "Verification pipeline wrapping the upstream CommitLLM verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
commitllm-verifier = { git = "https://github.com/lambdaclass/CommitLLM.git", rev = "25541e83347655e44ad6e84eb901e1e7ae392a66", package = "verilm-verify" }
vi-errors = { path = "../vi-errors" }
vi-receipt = { path = "../vi-receipt" }

[lints]
workspace = true
